# Build_Systems_HW

./: .gitignore  CMakeLists.txt
C/: main.h
a/: CMakeLists.txt  lib.cpp  lib.h
b/: main.cpp  main.h
c/: preparing.py
